...

    <item android:id="@+id/menu_main_sair"
        android:title="@string/item_sair"
        android:orderInCategory="300"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_main_conversas"
        android:title="Abrir conversas"
        android:orderInCategory="400"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_message"/>


...
