...
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/btn_circle"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:layout_centerVertical="true"
            android:id="@+id/lista_contato_personalizado_vizualizacao"/>
    </RelativeLayout>

</LinearLayout>
