...
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activity.MainActivity"
android:orientation="vertical"
    android:id="@+id/main_id">

<include android:id="@+id/toolbar"
    layout="@layout/toolbar_main_white"></include>

<LinearLayout
    android:layout_width="match_parent"
...
        android:id="@+id/categorias_spinner"
        android:layout_marginLeft="5dp"></Spinner>
</LinearLayout>


<androidx.viewpager.widget.ViewPager
    android:id="@+id/vp_main"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:background="@color/gray">
</androidx.viewpager.widget.ViewPager>

...
